--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <body>
     <div class="container">
         <img src="wedding.png" alt="Wedding Program">
-        <div class="footer">Swipe or zoom in to view details</div>
+        <div class="footer">Zoom in to view details</div>
     </div>
 </body>
 </html>
